# pdca-backend

./: .dockerignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
api/: dependencies.py  errors.py  oauth2.py  permissions.py  settings.py  utils.py
api/cruds/: pdca.py  task.py  user.py
api/db/: base.py  db.py  migrate_base.py
api/models/: pdca.py  task.py  user.py
api/routers/: pdca.py  task.py  user.py
api/schemas/: pdca.py  task.py  user.py
api/types/: oauth2.py  response.py
docker/fastapi/local/: Dockerfile
migrations/: env.py
migrations/versions/: 0df246927b48_add_task.py  305d3cb11534_create_tables.py  950ccb85fe56_add_pdca.py  fcf5bfe849e6_add_unique_name.py
tests/: conftest.py  data.py
tests/apis/: test_task.py  test_user.py
tests/apis/tasks/: test_create_task.py  test_delete_task.py  test_get_task_by_id.py  test_read_me_tasks.py  test_update_task.py
tests/apis/users/: test_delete_me.py  test_login.py  test_read_me.py  test_signup.py  test_update_me.py
tests/types/: common.py  request.py  response.py
